--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <!-- Add a label for 'fullname'-->
       <input type="text" id="fullname" placeholder="Enter Name">
+      <input type="email" id="email" placeholder="Enter Email">
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
