--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <form>
 
       <!-- Add a label for 'fullname'-->
-      <input type="text" id="fullname" placeholder="Enter Name">
-      <input type="email" id="email" placeholder="Enter Email">
+      <input type="text" id="fullname" placeholder="Enter Name" required>
+      <input type="email" id="email" placeholder="Enter Email" required>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
