Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <!-- Add a label for 'fullname'-->
       <input type="text" id="fullname" placeholder="Enter Name" required>
-      <input type="email" id="email" placeholder="Enter Email" required>
+
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
@@ -26,26 +26,12 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input type="email" id="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
-    </form>
-
-  </body>
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
+      
 </html>
