--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
       <input type="text" id="fullname" placeholder="Enter Name" required>
+      <label for="fullname"> What's your fullname?</label>
 
       <!-- Add a label for 'email'-->
 
