--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
       <input type="email" id="email" placeholder="Enter Email" required>
-
+      <label for="email"> What's your email?</label>
       <!-- Add a label for 'phone'-->
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
+      <label for="phone"> What's your phone number?</label>
 
+      <textarea id="message" placeholder="Enter Message"></textarea>
 </html>
