--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
       <input type="tel" id="phone" placeholder="Enter Telephone (optional)" optional>
       <label for="phone"> What's your phone number?</label>
 
-      <textarea id="message" placeholder="Enter Message"></textarea>
+      <textarea id="message" placeholder="Enter Message">Any message?</textarea>
+      <label for="message"> What's your message?</label>
 </html>
