Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -35,4 +35,5 @@
 
       <textarea id="message" placeholder="Enter Message"></textarea>
       <label for="message"> What's your message?</label>
+    </form>
 </html>
