--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <label for="message"> What's your message?</label>
       <textarea id="message" placeholder="Enter Message"></textarea>
 
-      
-
+      <h3>What is your favourite icecream?<h3>
+      <input type="checkbox" name="icecream-1" value="vanilla">Vanila<br>
+      <input type="checkbox" name="icecream-2" value="chocolate">Chocolate<br>
+      <input type="checkbox" name="icecream-3" value="lemon">Lemon<br>
     </form>
 </html>
