Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
       <input type="checkbox" name="icecream-1" value="vanilla">Vanila<br>
       <input type="checkbox" name="icecream-2" value="chocolate">Chocolate<br>
       <input type="checkbox" name="icecream-3" value="lemon">Lemon<br>
+
+      <input type="submit" value="submit">
     </form>
 </html>
