--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <textarea id="message" placeholder="Enter Message"></textarea>
 
       <h3>What is your favourite icecream flavour?<h3>
-      <input type="checkbox" name="icecream-1" value="vanilla">Vanila<br>
+      <input type="checkbox" name="icecream-1" value="vanilla">Vanilla<br>
       <input type="checkbox" name="icecream-2" value="chocolate">Chocolate<br>
       <input type="checkbox" name="icecream-3" value="lemon">Lemon<br>
 
